# oh_telemetry_collector_server_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_old  README.md  default.json  docker-compose-dbms.yml  docker-compose.yml  log4rs.yml  postman.json  production.json
configuration/: default.json
src/: main.rs  mod.rs
src/configuration/: config_database.rs  config_loader.rs  config_logging.rs
src/controller/: controller_common.rs  controller_storage.rs  controller_telemetry.rs  mod.rs
src/controller/request/: mod.rs  telemetry_insert_request.rs
src/controller/response/: mod.rs  telemetry_generic_response.rs
src/dao/: mod.rs  service_telemetry.rs
src/entity/: mod.rs  prelude.rs  telemetry.rs
src/migration/src/: lib.rs  m20220101_000001_create_table_telemetry.rs
src/route/: mod.rs  routes_telemetry.rs  routes_util.rs  telemetry_routes.rs
